package ar.edu.utn.ba.ddsi.climalert.services.reports.interfaces;

public interface IWeatherReportService
{
    void getWeather();
    void checkWeather();
}
